--- a/css/compte.css
+++ b/css/compte.css
@@ -1,6 +1,239 @@
-#page_user{
-  
+#espace_client{
+   margin-top: 20px;
 }
-#page_user h1{
+
+#info_client_general {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 50px;
+}
+
+.info_client {
+    background: rgb(0, 0, 0);
+    margin: 5px;
+    margin-bottom: 30px;
+    margin-left: 60px;
+    margin-right: 60px;
+    width: 500px;
+    height: 250px;
+    padding: 50px 80px;
+    line-height: 20px;
+    color: #cccccc;
+    border: #00eaff 1px solid;
+    box-shadow: rgba(3, 255, 234, 0.2) 0px 60px 40px -7px;
+}
+
+.info_client h3 {
+    padding-bottom: 20px;
+    text-align: center;
+}
+
+.info_client a {
+    color: #ffffff;
+    font-weight: 400;
+    line-height: 1.8rem;
+}
+
+.info_client a:hover {
+    color: #00eaff;
+    font-weight: 700;
+}
+
+.info_client h3 i {
+    color: rgba(255, 255, 255, 0.862);
+    font-size: 30px;
+    margin-right: 20px;
+}
+
+
+.btn2 {
+    display: block;
+    margin: auto;
+    margin-top: 30px;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 15px;
+    background-color: #00bdae;
     color: white;
+    padding: 20px 30px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: clamp(0.8rem, 0.5vw, 2rem);
+    font-weight: 500;
+    box-shadow: 0px 20px 35px 5px rgba(0, 234, 199, 0.15);
+}
+
+.modal2 {
+    display: none;
+    /* Hidden by default */
+    position: fixed;
+    /* Stay in place */
+    z-index: 99;
+    /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%;
+    /* Full width */
+    height: 100%;
+    /* Full height */
+    overflow: auto;
+    /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0);
+    /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4);
+    /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content2 {
+    display: block;
+    margin: auto;
+    margin-top: 80px;
+    background-image: url(../img/gridbg_glow.png);
+    background-color: #000;
+    padding: 20px;
+    width: 100%;
+    height: 100vh;
+    z-index: 2;
+    padding-bottom: 50px;
+    position: absolute;
+    /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close2 {
+    position: absolute;
+    right: 20px;
+    top: 30px;
+    width: 30px;
+    height: 30px;
+    color: rgb(0, 242, 255);
+    font-size: 35px;
+    border-radius: 50%;
+    padding: 2px 5px 7px 5px;
+    background: #373737;
+    cursor: pointer;
+}
+
+.close2:hover,
+.close2:focus {
+    color: rgb(253, 253, 253);
+    text-decoration: none;
+    cursor: pointer;
+}
+
+@media (max-width: 644px) {
+    .info_client {
+        background: rgb(0, 0, 0);
+        margin: 5px;
+        margin-bottom: 30px;
+        width: 320px;
+        height: auto;
+        padding: 50px 20px;
+    }
+
+    .modal-content2 {
+        width: 320px;
+        height: auto;
+
+        /* Could be more or less, depending on screen size */
+    }
+}
+
+#new_password, #new_password_retype, #current_password {
+    padding: 0.8rem;
+    margin: auto;
+    margin-top: 0.5rem;
+    width: 80%;
+    display: block;
+    border-radius: 0.5rem;
+    outline: none;
+    border: 1px solid #bdbdbb;
+}
+
+.popup {
+    background-color: #000000;
+
+}
+
+.popup .content {
+    position: absolute;
+    margin-top: 180px;
+    padding-top: 50px;
+    left: 50%;
+    transform: translate(-50%, -150%) scale(0);
+    width: 100%;
+    height: 100vh;
+    z-index: 2;
+    text-align: center;
+    padding: 10px;
+    border-radius: 5px;
+    background-image: url(../img/gridbg_glow.png);
+    background-color: #000;
+    z-index: 1;
+}
+
+.popup .close-btn {
+    position: absolute;
+    right: 20px;
+    top: 30px;
+    width: 30px;
+    height: 30px;
+    color: rgb(0, 242, 255);
+    font-size: 35px;
+    border-radius: 50%;
+    padding: 2px 5px 7px 5px;
+    background: #373737;
+    cursor: pointer;
+}
+
+.popup .close-btn:hover,
+.popup .close-btn:focus {
+    color: rgb(253, 253, 253);
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.popup.active .content {
+    transition: all 300ms ease-in-out;
+    transform: translate(-50%, -50%) scale(1);
+}
+
+.first-button {
+    display: block;
+    background-color: #00bdae;
+    color: #FFF;
+    padding: 1rem 1.25rem;
+    border-radius: .5rem;
+    transition: .3s;
+    margin: 20px auto;
+}
+
+#new_pseudo {
+    width: 320px;
+    margin: 20px;
+}
+
+#new_mail {
+    width: 320px;
+    margin-left: 20px;
+}
+
+.sauvegarde {
+    display: block;
+    background-color: #00bdae;
+    color: #FFF;
+    padding: 1rem 1.25rem;
+    border-radius: .5rem;
+    transition: .3s;
+    margin: 20px auto;
+}
+
+.modif {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
