--- a/css/compte.css
+++ b/css/compte.css
@@ -8,7 +8,7 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    padding-bottom: 50px;
+    padding: 50px 0;
 }
 
 .info_client {
@@ -28,7 +28,6 @@
 
 .info_client h3 {
     padding-bottom: 20px;
-    text-align: center;
 }
 
 .info_client a {
