--- a/css/actualites.css
+++ b/css/actualites.css
@@ -1,7 +1,8 @@
-.page_actu{
+.page_actu {
     padding-top: 10px;
 }
-.container_actu{
+
+.container_actu {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -9,42 +10,59 @@
     padding: 50px 0;
 
 }
-.actu_ind{
+
+.actu_ind {
     display: flex;
-    flex-direction: column;
-    width: 300px;
+    flex-direction: row;
+    align-items: flex-end;
+    width: 80%;
     margin: 20px;
     border: 2px solid rgb(0, 255, 242);
+    border-radius: 10px;
     padding: 20px;
+    background-color: black;
 }
-.img_actu img{
-max-width: 100%;
-border-radius: 10px;
-height:100%;
-width: 100%;
+.img_actu{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
 }
+.contenu{
+    display: flex;
+    flex-direction: column;
+    margin-left: 20px;
+}
+.img_actu img {
+
+    max-width: 100%;
+    border-radius: 10px;
+    height: auto;
+    width: 30%;
+}
+
 .date{
-    padding-bottom: 20px;
-    margin-bottom: 20px;
-    border-bottom: 2px solid;
-    display: inline-block;
-    color: aliceblue;
+    font-size: 14px;
+    margin-top: 20px;
 }
-.date_title{
-    display: block;
-    font-size: 32px;
-    margin-bottom: 10px;
-    font-weight: 500;
-}
-.title{
+.title {
     font-size: 25px;
     font-weight: 500;
     margin-top: 10px;
     margin-bottom: 15px;
     color: aliceblue;
 }
-.txt{
+
+.txt {
     margin: 10px 0;
     line-height: 1.6em;
     font-size: 15px;
+}
+@media screen and (max-width: 850px) {
+    .img_actu{
+        display: flex;
+        flex-direction: column;
+    }
+    .img_actu img{
+        width:100%;
+    }
 }
