--- a/css/ville.css
+++ b/css/ville.css
@@ -8,6 +8,7 @@
 .page_ville h1{
     text-align: center;
     font-weight: 900;
+    font-size: clamp(1.3rem, 3vw, 2.2rem);
 }
 .page_ville h1 img{
     width:20px;
