--- a/css/vaisseau.css
+++ b/css/vaisseau.css
@@ -224,10 +224,11 @@
     width: 100%;
 
   }
-
+  .info_construct {
+    margin: 0 0px;
 
 }
-
+}
 .recherche {
   padding: 150px;
   color: white;
