--- a/css/compte.css
+++ b/css/compte.css
@@ -1,5 +1,5 @@
-#espace_client{
-   margin-top: 20px;
+#espace_client {
+    margin-top: 20px;
 }
 
 #info_client_general {
@@ -29,9 +29,11 @@
 .info_client h3 {
     padding-bottom: 20px;
 }
-.info_client form h3{
+
+.info_client form h3 {
     text-align: center;
 }
+
 .info_client a {
     color: #ffffff;
     font-weight: 400;
@@ -143,7 +145,9 @@
     }
 }
 
-#new_password, #new_password_retype, #current_password {
+#new_password,
+#new_password_retype,
+#current_password {
     padding: 0.8rem;
     margin: auto;
     margin-top: 0.5rem;
