--- a/css/index.css
+++ b/css/index.css
@@ -12,7 +12,7 @@ html {
 #hero-header {
     box-shadow: 3px 3px 2px #bebebe;
     width: 100%;
-    height:100vh;
+    height: 100vh;
     /* hero-header flexbox */
     display: flex;
     justify-content: center;
@@ -463,11 +463,12 @@ p.demos {
     fill: currentColor;
 }
 
-.wrapper_actu h1{
+.wrapper_actu h1 {
     color: white;
     font-size: clamp(1.8rem, 3vw, 3rem);
     text-align: center;
 }
+
 .news-slider {
     z-index: 2;
     max-width: 1300px;
@@ -532,18 +533,18 @@ p.demos {
     height: 50px;
     justify-content: center;
     align-items: center;
-    box-shadow: 0 6px 26px 6px rgba(79,209,197,.64);
+    box-shadow: 0 6px 26px 6px rgba(79, 209, 197, .64);
     border-radius: 50%;
     position: absolute;
     top: 50%;
     z-index: 12;
     cursor: pointer;
     outline: none !important;
-   
-  background: linear-gradient(90deg, rgba(129,230,217,1) 0%, rgba(79,209,197,1) 100%);
+
+    background: linear-gradient(90deg, rgba(129, 230, 217, 1) 0%, rgba(79, 209, 197, 1) 100%);
     border: none;
     border-radius: 1000px;
-    
+
     transition: all 0.3s ease-in-out 0s;
     padding: 10px;
 }
