--- a/css/vaisseau_ind.css
+++ b/css/vaisseau_ind.css
@@ -1,38 +1,45 @@
-table{
-	
+table {
+
 	width: 100%;
 }
-table, th, td{
-    color: white;
-    text-align:left ; 
-    border: solid 1px rgba(104, 242, 255, 0.236);
+
+table,
+th,
+td {
+	color: white;
+	text-align: left;
+	border: solid 1px rgba(104, 242, 255, 0.236);
 	border-collapse: collapse;
 	background-color: #000000;
 }
-th,td{
-    padding: 20px;
+
+th,
+td {
+	padding: 20px;
 	text-align: center;
 }
+
 .block {
 	position: relative;
-    margin-left: auto;
+	margin-left: auto;
 	margin-right: auto;
 	margin-top: 10px;
 	margin-bottom: -40px;
-    padding: 50px;
+	padding: 50px;
 	height: auto;
 	background: black;
 	background-image: url(../img/gridbg_glow.png);
 	width: 100%;
 }
 
-.block:before, .block:after {
+.block:before,
+.block:after {
 	content: '';
 	position: absolute;
 	left: -2px;
 	top: -2px;
-	background: linear-gradient(45deg, #8bf9ff, #50e5ff, #1df0fb,#1e5968, #10a8aa, #66b5ff, 
-		#47fafd, #61f8f3,#1ed2ff, #343434);
+	background: linear-gradient(45deg, #8bf9ff, #50e5ff, #1df0fb, #1e5968, #10a8aa, #66b5ff,
+			#47fafd, #61f8f3, #1ed2ff, #343434);
 	background-size: 400%;
 	width: calc(100% + 10px);
 	height: calc(100% + 4px);
@@ -44,9 +51,11 @@ th,td{
 	0% {
 		background-position: 0 0;
 	}
+
 	50% {
 		background-position: 400% 0;
 	}
+
 	100% {
 		background-position: 0 0;
 	}
@@ -55,68 +64,82 @@ th,td{
 .block:after {
 	filter: blur(50px);
 }
+
 @media screen and (max-width: 869px) {
-	.block {	
+	.block {
 		padding: 10px;
 		overflow: hidden;
 	}
-	.info_vaisseau{
-		width:100%;
+
+	.info_vaisseau {
+		width: 100%;
 	}
-	.info_vaisseau .description{
+
+	.info_vaisseau .description {
 		width: 100%;
 		color: aliceblue;
 		text-align: justify;
 		line-height: 1.8em;
 	}
+
 	.description_vaisseau {
 		margin: 0;
 		margin-bottom: 40px;
 		padding: 30px;
 		width: 100%;
 	}
-	.info_vaisseau img{
+
+	.info_vaisseau img {
 		width: 400px;
 	}
-	table{
+
+	table {
 		color: white;
-		text-align:left ; 
+		text-align: left;
 		border: solid 1px rgba(104, 242, 255, 0.155);
 		border-collapse: collapse;
-		
+
 	}
-	table{
+
+	table {
 		width: 100%;
 		margin-bottom: 50px;
 	}
 }
+
 @media screen and (min-width: 870px) and (max-width: 1140px) {
 	.block {
-		
+
 		padding: 10px;
 	}
+
 	.description_vaisseau {
-		width:	100%;
+		width: 100%;
 		margin-bottom: 40px;
 	}
-	.info_vaisseau img{
-		width:400px;
+
+	.info_vaisseau img {
+		width: 400px;
 	}
-	.info_vaisseau{
-		width:100%;
+
+	.info_vaisseau {
+		width: 100%;
 	}
-	.info_vaisseau .description{
+
+	.info_vaisseau .description {
 		width: 40%;
 	}
-	.caracteristique{
+
+	.caracteristique {
 		display: block;
 		margin: auto;
 	}
 
 }
-@media screen and (max-width: 460px){
-	.info_vaisseau img{
-		width:320px;
+
+@media screen and (max-width: 460px) {
+	.info_vaisseau img {
+		width: 320px;
 		margin: 20px 0;
 	}
 
