--- a/css/contact.css
+++ b/css/contact.css
@@ -63,7 +63,7 @@ textarea:valid~label {
   max-width: 100%;
 }
 
-input,
+input[type="text"], input[type="email"],
 textarea {
   padding: 30px;
   border: 0;
