--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,56 @@ html {
     position: relative;
 }
 
+.actu_ind_accueil {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 320px;
+    margin: 20px;
+    border: 2px solid rgba(0, 0, 0, 0);
+    border-radius: 10px;
+    padding: 20px;
+    background-color: black;
+    box-shadow: rgb(6 201 255 / 25%) 0px 50px 100px -20px, rgb(28 159 220 / 30%) 0px 30px 60px -30px, rgb(32 121 210 / 35%) 0px -2px 6px 0px inset;
+}
+
+.img_actu_accueil {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+}
+
+.contenu {
+    display: flex;
+    flex-direction: column;
+    margin-left: 20px;
+}
+
+.img_actu_accueil img {
+
+    max-width: 100%;
+    border-radius: 10px;
+    height: auto;
+}
+
+.date_accueil {
+    font-size: 14px;
+    margin-top: 20px;
+}
+
+.title_accueil {
+    font-size: 20px;
+    font-weight: 500;
+    margin-top: 10px;
+    margin-bottom: 15px;
+    color: aliceblue;
+}
+
+.txt_accueil {
+    margin: 10px 0;
+    line-height: 1.6em;
+    font-size: 15px;
+}
 
 #hero-header {
     box-shadow: 3px 3px 2px #bebebe;
@@ -461,274 +511,4 @@ p.demos {
     stroke-width: 0;
     stroke: currentColor;
     fill: currentColor;
-}
-
-.wrapper_actu h1 {
-    color: white;
-    font-size: clamp(1.8rem, 3vw, 3rem);
-    text-align: center;
-}
-
-.news-slider {
-    z-index: 2;
-    max-width: 1300px;
-    margin-left: auto;
-    margin-right: auto;
-    border-radius: 25px;
-}
-
-@media screen and (max-width: 1300px) {
-    .news-slider {
-        max-width: 1000px;
-    }
-}
-
-@media screen and (max-width: 576px) {
-    .news-slider {
-        margin-top: 45px;
-    }
-}
-
-.news-slider__wrp {
-    display: flex;
-    align-items: flex-start;
-    position: relative;
-    z-index: 2;
-}
-
-.news-slider__item {
-    width: 400px;
-    flex-shrink: 0;
-}
-
-@media screen and (max-width: 992px) {
-    .news-slider__item {
-        width: 340px;
-    }
-}
-
-.news-slider__item.swiper-slide {
-    opacity: 0;
-    pointer-events: none;
-    transition: all 0.3s;
-}
-
-.news-slider__item.swiper-slide-active,
-.news-slider__item.swiper-slide-prev,
-.news-slider__item.swiper-slide-next {
-    opacity: 1;
-    pointer-events: auto;
-}
-
-.news-slider__ctr {
-    position: relative;
-    z-index: 12;
-}
-
-.news-slider__arrow {
-    background: #4FD1C5;
-    border: none;
-    display: inline-flex;
-    width: 50px;
-    height: 50px;
-    justify-content: center;
-    align-items: center;
-    box-shadow: 0 6px 26px 6px rgba(79, 209, 197, .64);
-    border-radius: 50%;
-    position: absolute;
-    top: 50%;
-    z-index: 12;
-    cursor: pointer;
-    outline: none !important;
-
-    background: linear-gradient(90deg, rgba(129, 230, 217, 1) 0%, rgba(79, 209, 197, 1) 100%);
-    border: none;
-    border-radius: 1000px;
-
-    transition: all 0.3s ease-in-out 0s;
-    padding: 10px;
-}
-
-.news-slider__arrow:focus {
-    outline: none !important;
-}
-
-.news-slider__arrow .icon-font {
-    display: inline-flex;
-}
-
-.news-slider__arrow.news-slider-prev {
-    left: 15px;
-    transform: translateY(-50%);
-}
-
-.news-slider__arrow.news-slider-next {
-    right: 15px;
-    transform: translateY(-50%);
-}
-
-.news-slider__pagination {
-    text-align: center;
-    margin-top: 50px;
-    margin-bottom: 80px;
-}
-
-.news-slider__pagination .swiper-pagination-bullet {
-    width: 13px;
-    height: 10px;
-    display: inline-block;
-    background: rgb(96, 255, 244);
-    opacity: 0.2;
-    margin: 0 5px;
-    border-radius: 20px;
-    transition: opacity 0.5s, background-color 0.5s, width 0.5s;
-    transition-delay: 0.5s, 0.5s, 0s;
-}
-
-.news-slider__pagination .swiper-pagination-bullet-active {
-    opacity: 1;
-    background: #4FD1C5;
-    width: 100px;
-    transition-delay: 0s;
-}
-
-@media screen and (max-width: 576px) {
-    .news-slider__pagination .swiper-pagination-bullet-active {
-        width: 70px;
-    }
-}
-
-.news__item {
-    padding: 40px;
-    color: #fff;
-    border-radius: 10px;
-    display: block;
-    transition: all 0.3s;
-}
-
-@media screen and (min-width: 800px) {
-    .news__item:hover {
-        color: #ffffff;
-        transition-delay: 0.1s;
-    }
-
-    .news__item:hover .news-date,
-    .news__item:hover .news__title,
-    .news__item:hover .news__txt {
-        opacity: 1;
-        transition-delay: 0.1s;
-    }
-
-    .news__item:hover .news__img {
-        box-shadow: none;
-    }
-}
-
-.news__item.active {
-    color: #ffffff;
-}
-
-.news__item.active .news-date,
-.news__item.active .news__title,
-.news__item.active .news__txt {
-    opacity: 1;
-}
-
-.news__item.active .news__img {
-    box-shadow: none;
-}
-
-@media screen and (max-width: 992px) {
-    .news__item {
-        padding: 30px;
-    }
-}
-
-@media screen and (max-width: 576px) {
-    .news__item {
-        padding: 20px;
-    }
-}
-
-.news-date {
-    padding-bottom: 20px;
-    margin-bottom: 20px;
-    border-bottom: 2px solid;
-    display: inline-block;
-    opacity: 0.7;
-    transition: opacity 0.3s;
-}
-
-@media screen and (max-width: 576px) {
-    .news-date {
-        margin-bottom: 10px;
-        display: inline-flex;
-        align-items: center;
-        padding-bottom: 0;
-    }
-}
-
-.news-date__title {
-    display: block;
-    font-size: 32px;
-    margin-bottom: 10px;
-    font-weight: 500;
-}
-
-@media screen and (max-width: 576px) {
-    .news-date__title {
-        margin-right: 10px;
-    }
-}
-
-.news-date__txt {
-    font-size: 16px;
-}
-
-.news__title {
-    font-size: 25px;
-    font-weight: 500;
-    opacity: 0.7;
-    margin-top: 10px;
-    margin-bottom: 15px;
-    transition: opacity 0.3s;
-}
-
-@media screen and (max-width: 576px) {
-    .news__title {
-        font-size: 22px;
-        margin-bottom: 10px;
-    }
-}
-
-.news__txt {
-    margin: 10px 0;
-    line-height: 1.6em;
-    font-size: 15px;
-    opacity: 0.7;
-    transition: opacity 0.3s;
-}
-
-.news__img {
-    border-radius: 10px;
-    box-shadow: 0 6px 26px 6px rgba(0, 0, 0, 0.25);
-    height: 200px;
-    margin-top: 30px;
-    width: 100%;
-    transition: all 0.3s;
-    transform-origin: 0% 0%;
-}
-
-@media screen and (max-width: 576px) {
-    .news__img {
-        height: 180px;
-        margin-top: 20px;
-    }
-}
-
-.news__img img {
-    max-width: 100%;
-    border-radius: 10px;
-    height: 100%;
-    width: 100%;
 }
