--- a/css/planete.css
+++ b/css/planete.css
@@ -116,7 +116,7 @@
 
 .info_planete {
     box-shadow: rgba(6, 201, 255, 0.25) 0px 50px 100px -20px, rgba(28, 159, 220, 0.3) 0px 30px 60px -30px, rgba(32, 121, 210, 0.35) 0px -2px 6px 0px inset;
-    border: #00fffc 1px solid;
+    border: #00fffb00 1px solid;
     margin: 20px 15%;
 }
 
